@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-01T16:35:15Z",
-  "count_outdated" : 492,
-  "uniques_outdated" : 276,
-  "count" : 535,
+  "timestamp" : "2022-06-02T02:03:59Z",
+  "count_outdated" : 495,
+  "uniques_outdated" : 277,
+  "count" : 537,
   "uniques" : 304,
   "clones" : [
-    {
-      "timestamp": "2022-05-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-19T00:00:00Z",
       "count": 3,
