@@ -1,3 +1,10 @@
+2022-06-02T02:03:59Z:
+* notice: last 14d: unq all: 15 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 276 492 / 304 535
+* notice: next accum: outdated-unq outdated-all / unq all: 277 495 / 304 537
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-05-18] / []
+
 2022-06-01T16:35:15Z:
 * notice: last 14d: unq all: 15 43
 * notice: prev accum: outdated-unq outdated-all / unq all: 276 492 / 304 535
